Admin crud operations developed
Admin update/delete/view
Shop update/delete/view
Add listing delete/update
Notification create
Disputes view/update  developed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CrownLK">
         <activity
+            android:name=".AddListing"
+            android:exported="false" />
+        <activity
             android:name=".DashBoardActivity"
             android:exported="false" />
         <activity
