--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,31 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CrownLk">
+        android:theme="@style/Theme.CrownLK">
+        <activity android:name=".ProductViewActivity"></activity>
         <activity
-            android:name=".UserSignIn"
-            android:exported="false" />
+            android:name=".LoginActivity"
+            android:parentActivityName=".StartActivity" />
+        <activity android:name=".MainActivity" />
         <activity
-            android:name=".HomePage"
-            android:exported="false" />
-        <activity
-            android:name=".checkout"
-            android:exported="false" />
-        <activity
-            android:name=".update"
-            android:exported="false" />
-        <activity
-            android:name=".profile"
-            android:exported="false" />
-        <activity
-            android:name=".cart"
-            android:exported="false" />
-        <activity
-            android:name=".favorite"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".RegisterActivity"
+            android:parentActivityName=".StartActivity" />
+        <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
